# mesh_sweep

./: .gitignore  .gitmodules
build_tools/: run.bat
src/: CMakeLists.txt
src/Boolean/: CMakeLists.txt  boolean.cc  face_face.cc  selection.cc
src/Geo/: CMakeLists.txt  bspline_fiting.cc  entity.cc  transofrom.cc  transofrom.hh  vector.hh
src/Import/: CMakeLists.txt  load_obj .cc  save_obj.cc
src/Levelset/: CMakeLists.txt  convert.cxx  convert.hxx
src/PolygonTriangularization/: CMakeLists.txt
src/TestMe/: CMakeLists.txt  test_rotation.cxx  test_vertex_normals.cxx  utils.cxx  utils.hxx
src/Topology/: CMakeLists.txt  geom.cc  geom.hh
src/Utils/: CMakeLists.txt
